Bug 219493 - nsPersistentProperties doesn't handle multi-line properties files correctly. Checking in the first patch in this bug to ensure there are no major regressions. r=darin@meer.net, sr=alecf@flett.org